# A-Transformer-Based-Neural-Network-to-Predict-Credit-Card-Default

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: amex_lgbm_manual.yaml  amex_lgbm_series_oof.yaml  amex_transformer_no_fe.yaml  amex_transformer_with_fe.yaml  taiwan_lgbm.yaml  taiwan_transformer.yaml
scripts/amex/: ensemble.py  prepare_data.py  prepare_features.py  train_lgbm.py  train_series_lgbm.py  train_transformer.py
scripts/taiwan/: ensemble.py  evaluate.py  predict_transformer.py  prepare_data.py  train_lgbm.py  train_transformer.py
src/credit_default_prediction/: __init__.py  metrics.py
src/credit_default_prediction/data/: amex.py  amex_features.py  sequence.py  taiwan.py
src/credit_default_prediction/models/: __init__.py  amex_transformer.py  taiwan_transformer.py
src/credit_default_prediction/training/: amex_lightgbm.py  amex_transformer.py  taiwan_lightgbm.py  taiwan_transformer.py  torch_utils.py
