[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-default-prediction"
version = "0.1.0"
description = "Transformer-based credit card default prediction experiments for the paper."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
